fix: fix checking if provider is authenticated
